--- a/package.json
+++ b/package.json
@@ -3,24 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
+  "type": "module",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
+    "body-parser": "^2.0.0-beta.2",
+    "cors": "^2.8.5",
+    "express": "^5.0.0-beta.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "nodemon": "3.1.0"
   }
 }
